--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
     "next": "16.0.10",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
